--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "rautio",
   "license": "",
   "dependencies": {
+    "idb": "^8.0.0",
     "lit": "^3.2.0"
   },
   "devDependencies": {
