--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src"
   },
   "keywords": [
     "har",
@@ -27,13 +28,17 @@
     "@11ty/eleventy": "^1.0.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
     "@custom-elements-manifest/analyzer": "^0.6.3",
+    "@eslint/js": "^9.15.0",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "@webcomponents/webcomponentsjs": "^2.8.0",
-    "eslint": "^8.15.0",
-    "lit-analyzer": "^1.2.1",
+    "eslint": "^9.15.0",
+    "eslint-plugin-lit": "^1.15.0",
+    "globals": "^15.12.0",
+    "lit-analyzer": "^2.0.3",
     "prettier": "^2.6.2",
     "typescript": "~5.5.0",
+    "typescript-eslint": "^8.15.0",
     "vite": "^5.4.10"
   },
   "customElements": "custom-elements.json"
