--- a/package.json
+++ b/package.json
@@ -35,11 +35,18 @@
     "eslint": "^9.15.0",
     "eslint-plugin-lit": "^1.15.0",
     "globals": "^15.12.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.10",
     "lit-analyzer": "^2.0.3",
     "prettier": "^2.6.2",
     "typescript": "~5.5.0",
     "typescript-eslint": "^8.15.0",
     "vite": "^5.4.10"
   },
-  "customElements": "custom-elements.json"
+  "lint-staged": {
+    "**/*.{js,ts,css,html,json}": [
+      "eslint . --fix",
+      "prettier --write ."
+    ]
+  }
 }
